from enum import Enum as PyEnum

from sqlalchemy import Boolean, Column, DateTime, Integer, String
from app.utils.enum_utils import pg_enum

from app.database import Base
from app.utils.time_utils import utcnow


class UserRole(str, PyEnum):
    ADVISOR = "advisor"
    SECRETARY = "secretary"


class User(Base):
    __tablename__ = "users"

    id = Column(Integer, primary_key=True, autoincrement=True)
    full_name = Column(String, nullable=False)
    email = Column(String, unique=True, nullable=False, index=True)
    phone = Column(String, nullable=True)
    password_hash = Column(String(60),  nullable=False)
    
    role = Column(pg_enum(UserRole), nullable=False)
    is_active = Column(Boolean, default=True, nullable=False)
    token_version = Column(Integer, nullable=False, default=0, server_default="0")
    
    created_at = Column(DateTime, default=utcnow, nullable=False)
    last_login_at = Column(DateTime, nullable=True)

    def __repr__(self):
        return f"<User(id={self.id}, email='{self.email}', role='{self.role}')>"
